Fix footer on mobile and grids

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -32,6 +32,10 @@ thead {
     font-size: 32px;
 }
 
+footer {
+    height: 20%;
+}
+
 thead > tr {
     color: #1b1e21;
 }
